# pcd_process

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.txt
include/: functions.h
src/: functions.cpp  main.cpp  pcd_process.cpp  pcd_read.cpp
test_data/: sample1.pcd  sampleXYZ.pcd
